# quark

./: .gitignore  CMakeLists.txt  CMakeSettings.json  g_object.cpp  g_tank.cpp  g_world.cpp  g_world.h  net_main.h  net_msg.cpp  net_msg.inl  precompiled.h
assets/: royal_navy_ships.txt
assets/font/: atlas_Consolas-48.dds  atlas_Tahoma-48.dds
assets/particles/: blaster.decl  blaster_impact.decl  cannon.decl  explosion.decl
assets/shader/: font.fsh  font.vsh  light_f.glsl  light_f_mip.glsl  light_f_mip0.glsl
editor/: ed_ship_editor.cpp  ed_ship_editor.h
game/: g_aicontroller.cpp  g_aicontroller.h  g_button.cpp  g_character.cpp  g_character.h  g_client.cpp  g_fluid.cpp  g_fluid.h  g_handle.h  g_handle.natvis  g_item.cpp  g_item.h  g_menu.cpp  g_menu.h  g_navigation.cpp  g_navigation.h  g_network.cpp  g_object.cpp  g_object.h  g_onomastics.cpp  g_onomastics.h  g_particles.cpp  g_particles.h  g_player.cpp  g_player.h  g_projectile.cpp  g_projectile.h  g_rail_network.cpp  g_rail_network.h  g_rail_signal.cpp  g_rail_signal.h  g_rail_station.cpp  g_rail_station.h  g_resource.cpp  g_resource.h  g_server.cpp  g_session.cpp  g_session.h  g_shield.cpp  g_shield.h  (+19 more)
network/: net_message.cpp  net_message.h  net_socket.cpp
physics/: p_collide.cpp  p_compound.cpp  p_compound.h  p_motion.h  p_rigidbody.h  p_shape.h  p_trace.cpp  p_world.cpp  p_world.h
render/: r_draw.cpp  r_font.cpp  r_font.h  r_glyph.cpp  r_glyph.h  r_image.cpp  r_image.h  r_light.cpp  r_light.h  r_main.cpp  r_main.h  r_model.cpp  r_model.h  r_particle.h  r_shader.cpp  r_shader.h  r_window.cpp  r_window.h  sdl_window.cpp  sdl_window.h
render/gl/: gl_buffer.cpp  gl_buffer.h  gl_framebuffer.cpp  gl_framebuffer.h  gl_include.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_types.h  gl_vertex_array.cpp  gl_vertex_array.h
shared/: CMakeLists.txt  cm_bounds.h  cm_clothoid.cpp  cm_clothoid.h  cm_clothoid_network.cpp  cm_clothoid_network.h  cm_color.h  cm_config.cpp  cm_config.h  cm_console.cpp  cm_console.h  cm_curve.h  cm_delaunay.cpp  cm_delaunay.h  cm_enumflag.h  cm_error.h  cm_expression.cpp  cm_expression.h  cm_filesystem.cpp  cm_filesystem.h  cm_geometry.h  cm_matrix.h  cm_parser.cpp  cm_parser.h  cm_random.h  cm_rotor.h  cm_shared.cpp  cm_shared.h  cm_sound.h  cm_string.cpp  cm_string.h  cm_unicode.cpp  cm_unicode.h  cm_vector.h  shared.natvis
sound/: snd_device.cpp  snd_device.h  snd_dsound.cpp  snd_dsound.h  snd_files.h  snd_main.cpp  snd_main.h  snd_wav_resource.cpp  snd_wav_source.cpp  snd_wav_source.h
system/: resource.h  resource.rc  sdl_main.cpp  sdl_main.h  win_include.h  win_main.cpp  win_main.h  win_types.h
